Bug 1596040 - Teach HTMLLinkElement's relList about 'manifest' r=bzbarsky

Fenix wants to ship Web Manifest support, while other Firefox products (e.g., Desktop) don't support it.

With the pref enabled, developers can check, via `link.relList.supports()`, if manifest processing is supported by a particular product.

Differential Revision: https://phabricator.services.mozilla.com/D55064

--HG--
extra : moz-landing-system : lando